--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,20 @@
-langchain-openai
-langchain
-python-dotenv
-langchain_community
-langchain_core
 streamlit
-langchain_groq
-langchain_chroma
-ipykernel
+python-dotenv
 pypdf
-bs4
-arxiv
-pymupdf
-wikipedia
-langchain-text-splitters
-chromadb
-sentence_transformers
-langchain_huggingface
-faiss-cpu
-langchain_chroma
-duckdb
-pandas
-openai
-duckduckgo-search
-wikipedia
-mysql-connector-python
-SQLAlchemy
-validators==0.28.1
-youtube_transcript_api
-unstructured
-pytube
-numexpr
-gradio
-torch
+
+langchain-groq
+
+langchain-huggingface
+sentence-transformers
+
 pysqlite3-binary
+
+langchain-chroma
+chromadb
+
+langchain==0.2.5
+langchain-community==0.2.5
+langchain-core==0.2.14
+langchain-text-splitters==0.2.1
+
+torch
